Docs, added more checks on fetch/query methods, removed extaneous calls to getTableColumnsPropertyInfo, Added SQL string to exceptions